[af] Fix border shadow on Mac

This prevents the native border to be applied on the widget, so
only the border style provided by views will be applied. This has
no effect on Windows, but on Mac we get exactly what we need.

Screenshots (Googlers only): https://drive.google.com/open?id=17hQlLXo5dk8XMwKU90wLgwigIVOhxPbn

Bug: 847473
Change-Id: I5dccdadbae2405b259e3cad30857c0fb413a0338
Reviewed-on: https://chromium-review.googlesource.com/1076312
Reviewed-by: Evan Stade <estade@chromium.org>
Commit-Queue: Fabio Tirelo <ftirelo@chromium.org>
Cr-Commit-Position: refs/heads/master@{#562609}
Former-commit-id: 58c02f4c99010290e5982cb53889459dc59e8cdf